--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3b</title>
     <link rel="stylesheet" href="styles.css" />
-   
   </head>
-
+    <header class="cabecalho">
+      
+    </header>
   <body>
     <div class="container">
       <div class="left-container">
