--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="header-content">
       <img src="expo.png" alt="expo" class="header-logo">
-        <h1>Projetos Desenvolvidos pelos Alunos do 3°B </h1>
+        <h1>Projetos EXPOSOFT Alunos do 3°B </h1>
         <a href="#" class="back-button">Voltar</a>
       </div>
     </header>
@@ -18,22 +18,22 @@
     <main>
         <section class="site-list">
             <article class="site-item">
-              <img src="belezafios.jpeg" alt="Logo" class="logo">
+              <img src="belezafios.jpeg" alt="Logo" class="logoB">
               <h2>Beleza dos Fios</h2>
-              <p>Beleza Dos Fios: Beleza Dos Fios é um site com o intuito de ajudar e simplifcar a procura e escolha de produtos para cabelo, contendo uma variedade enorme de produtos. O site se alinha na ideia de entregar o máximo de satisfação do cliente com seus produtos e consequentemente, com o site. Possuindo uma interface que facilita a visibilidade e escolha dos produtos de acordo com o tipo de cabelo do usuário, fazendo com que sua compra seja sempre mais fácil.</p>
+              <p>Beleza Dos Fios é um site com o intuito de ajudar e simplifcar a procura e escolha de produtos para cabelo, contendo uma variedade enorme de produtos. O site se alinha na ideia de entregar o máximo de satisfação do cliente com seus produtos e consequentemente, com o site. Possuindo uma interface que facilita a visibilidade e escolha dos produtos de acordo com o tipo de cabelo do usuário, fazendo com que sua compra seja sempre mais fácil.</p>
               <a href="#" target="_blank" class="button">Acessar Site</a>
           </article>
 
             <article class="site-item">
                 <img src="coracaocafe.jpeg" alt="Logo" class="logo" width="200px">
                 <h2>Coração de Café</h2>
-                <p>Esse site com o tema de Cafeteria atrai um público de todas as idades, além disso, o consumo de café e seus variados acompanhamentos tem uma relevância significativa no público. Esses aspectos tornam o tema de cafeteria uma escolha estratégica e eficiente, capaz de oferecer uma experiência rica e agradável aos usuários do site, ao mesmo tempo que proporciona inúmeras oportunidades de desenvolvimento e crescimento. Os produtos irão ter várias categorias: bebidas, salgados, doces entre outros. Assim que o cliente comprá-lo ele terá a possibilidade de retirá-lo na loja “física”.</p>
+                <p>Nossa cafeteria é um espaço acolhedor e pensado para todos os públicos, oferecendo uma experiência rica e diversificada. Aqui, você encontra uma variedade de produtos cuidadosamente selecionados, como bebidas, salgados e doces, organizados para facilitar sua escolha e tornar seu momento conosco ainda mais especial. Além disso, ao realizar suas compras online, você pode optar pela retirada em nossa loja física, proporcionando praticidade e conforto.</p>
                 <a href="#" target="_blank" class="button">Acessar Site</a>
             </article>
             
 
           <article class="site-item">
-          <img src="img/logo4.png" alt="Logo" class="logo">
+          <img src="djll.png" alt="Logo" class="logo">
           <h2>DJLL Company</h2>
           <p>Na DJLL Company, acreditamos que cada cliente merece um atendimento personalizado e transparente. Nossa missão é proporcionar uma experiência única, desde o primeiro contato até a entrega das chaves do seu novo carro. Trabalhamos incansavelmente para entender suas necessidades e ajudar a transformar o seu desejo em realidade.</p>
           <a href="#" target="_blank" class="button">Acessar Site</a>
@@ -41,14 +41,14 @@
 
 
     <article class="site-item">
-      <img src="holeone.png" alt="Logo" class="logo">
+      <img src="holeone.png" alt="Logo" class="logoH">
       <h2>HOLE ONE!</h2>
       <p>A empresa Hole One é um projeto escolar que consiste em uma plataforma online para a compra e venda de roupas e acessórios de segunda mão. Nosso principal objetivo é promover um consumo mais consciente e sustentável. Ao adquirir peças usadas, os usuários podem economizar dinheiro e ter acesso a itens exclusivos e de qualidade.</p>
       <a href="#" target="_blank" class="button">Acessar Site</a>
   </article>
 
           <article class="site-item">
-            <img src="img/logo3.png" alt="Logo" class="logo">
+            <img src="kloth.png" alt="Logo" class="logo">
             <h2>KLOTH - Sportlife</h2>
             <p>Somos uma marca que visa expandir e apresentar ao mundo um estilo que surgiu e se mantém predominante nas periferias e favelas brasileiras, que é a estética Sport/Sportlife. Escolhemos esta vertente por identificação dos integrantes. </p>
             <a href="#" target="_blank" class="button">Acessar Site</a>
@@ -63,7 +63,12 @@
         <a href="#" target="_blank" class="button">Acessar Site</a>
     </article>
 
-
+    <article class="site-item">
+      <img src="accords.jpeg" alt="Logo" class="logoS">
+      <h2>Semínima accords</h2>
+      <p>Nós do Semínima accords somos uma empresa que visa o incentivo da cultura e da música. Nosso site trás venda de instrumentos de qualidade e tbm a revenda, para os músicos conseguirem ter acesso a instrumentos independentes do preço. Nossa equipe sempre atenta a qualidade do produto e o vendedor. Nosso objetivo é trazer a cultura para todos!</p>
+      <a href="#" target="_blank" class="button">Acessar Site</a>
+  </article>
 
         </section>
     </main>
